--- a/src/contacts.html
+++ b/src/contacts.html
@@ -15,14 +15,14 @@
             <a href="index.html">Главная</a> →
             <span>О нас</span>
         </nav>
-        <h1>О нашей компании</h1>
+        <h1>Наши контакты:</h1>
         <section>
-            <h2>Наша история</h2>
-            <p>Текст о том, как все начиналось...</p>
+            <h2>Проще позвонить:</h2>
+            <p>8(800)555-35-35</p>
         </section>
         <section>
-            <h2>Наша команда</h2>
-            <p>Текст о команде...</p>
+            <h2>Наши соц сети:</h2>
+            <p>Телеграм: @prikol</p>
         </section>
     </main>
     <footer>
