--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <div class="content-wrapper">
         <!-- Шапка сайта -->
         <header>
-            <a href="/">KIKO</a>
+            <a href="/">peepiza</a>
             <!-- Главное меню навигации -->
             <nav>
                 <ul>
@@ -27,7 +27,7 @@
         <!-- Уникальное основное содержимое страницы -->
         <main>
             <h1>Добро пожаловать на наш сайт!</h1>
-            <p>Мы очень рады приветствовать вас на сайте самой лучшей галереи Москвы!</p>
+            <p>Здесь вы можете посмотреть разные варианты маникюра!</p>
 
             <!-- Контейнер для гифки -->
             <div class="gif-container">
@@ -44,9 +44,9 @@
             <section id="portfolio">
                 <h2>Портфолио</h2>
                 <p>Примеры наших работ</p>
-                <img src="../assets/0c18c2de735d97ddba827c9c250bf5ca.webp" alt="First_ship" width="100" height="100">
-                <img src="../assets/a47d85f44ce7c26d5cad3d6852cea6a7.webp" alt="Second_ship" width="100" height="100">
-                <img src="../assets/i.webp" alt="Third_ship" width="100" height="100">
+                <img src="../assets/-3.webp" alt="First_ship" width="100" height="100">
+                <img src="../assets/Cosmos dog pc wallpaper.webp" alt="Second_ship" width="100" height="100">
+                <img src="../assets/flying through space corgi - Imgur.webp" alt="Third_ship" width="100" height="100">
             </section>
 
             <!-- Секция 3 с якорем -->
@@ -59,7 +59,7 @@
 
         <!-- Подвал сайта -->
         <footer>
-            <p>&copy; 2023 Название вашего сайта. Все права защищены.</p>
+            <p>&copy; 2023 Прикольчики. Все права защищены.</p>
             <p>Телефон: +7 (123) 456-78-90</p>
         </footer>
     </div>
