--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         <!-- Уникальное основное содержимое страницы -->
         <main>
             <h1>Добро пожаловать на наш сайт!</h1>
-            <p>Здесь вы можете посмотреть разные варианты маникюра!</p>
+            <p>Здесь вы можете посмотреть мемы!</p>
 
             <!-- Контейнер для гифки -->
             <div class="gif-container">
