--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
             <!-- Контейнер для гифки -->
             <div class="gif-container">
-                <img src="../assets/12.gif" alt="Анимированная гифка">
+                <img src="../assets/animation.gif.gif" alt="Анимированная гифка">
             </div>
 
             <!-- Секция 1 с якорем -->
