--- a/src/contacts.html
+++ b/src/contacts.html
@@ -4,6 +4,7 @@
     ... <!-- Скопируйте весь блок <head> из index.html -->
     <title>Как с нами связаться</title>
     <meta name="description" content="Наши контакты для связи">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
