--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
 
             <!-- Контейнер для гифки -->
             <div class="gif-container">
-                <img src="../assets/animation.gif.gif" alt="Анимированная гифка">
+                <img src="../assets/animation.gif.gif" alt="Анимированная гифка" width="400" height="300">
             </div>
 
             <!-- Секция 1 с якорем -->
@@ -99,9 +99,9 @@
             <section id="portfolio" class="section">
                 <h2 class="section__title">Портфолио</h2>
                 <p>Примеры наших работ</p>
-                <img src="../assets/-3.webp" alt="First_ship" width="100" height="100">
-                <img src="../assets/Cosmos dog pc wallpaper.webp" alt="Second_ship" width="100" height="100">
-                <img src="../assets/flying through space corgi - Imgur.webp" alt="Third_ship" width="100" height="100">
+                <img src="../assets/-3.webp" alt="First_ship" width="200" height="150">
+                <img src="../assets/Cosmos dog pc wallpaper.webp" alt="Second_ship" width="200" height=150">
+                <img src="../assets/flying through space corgi - Imgur.webp" alt="Third_ship" width="200" height="150">
             </section>
 
             <!-- Секция 3 с якорем -->
