--- a/src/index.html
+++ b/src/index.html
@@ -91,14 +91,14 @@
 
             <!-- Секция 1 с якорем -->
             <section id="services" class="section">
-                <h2 class="section__title">Наши услуги...</h2>
+                <h2 class="section__title">Наши услуги: поднятие настроения пользователям</h2>
                 <a href="contacts.html">Связаться с нами</a>
             </section>
 
             <!-- Секция 2 с якорем -->
             <section id="portfolio" class="section">
-                <h2 class="section__title">Портфолио</h2>
-                <p>Примеры наших работ</p>
+                <h2 class="section__title">У нас есть такие мемы</h2>
+                <p>Например вот:</p>
                 <img src="../assets/-3.webp" alt="First_ship" width="200" height="150">
                 <img src="../assets/Cosmos dog pc wallpaper.webp" alt="Second_ship" width="200" height=150">
                 <img src="../assets/flying through space corgi - Imgur.webp" alt="Third_ship" width="200" height="150">
@@ -107,7 +107,7 @@
             <!-- Секция 3 с якорем -->
             <section id="contacts" class="section">
                 <h2 class="section__title">Контактная информация</h2>
-                <p>Наши контакты...</p>
+                <p>tg: @pricol</p>
                 <a href="contacts.html">Подробнее</a>
             </section>
         </main>
