--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
 
             <!-- Секция 2 с якорем -->
             <section id="portfolio" class="section">
-                <h2 class="section__title">У нас есть такие мемы</h2>
+                <h2 class="section__title">У нас есть разные мемы</h2>
                 <p>Например вот:</p>
                 <img src="../assets/-3.webp" alt="First_ship" width="200" height="150">
                 <img src="../assets/Cosmos dog pc wallpaper.webp" alt="Second_ship" width="200" height=150">
