--- a/src/about.html
+++ b/src/about.html
@@ -60,11 +60,6 @@
 
         <!-- Уникальное основное содержимое страницы -->
         <main>
-            <!-- Хлебные крошки -->
-            <nav class="breadcrumbs" aria-label="Хлебные крошки">
-                <a href="index.html">Главная</a> →
-                <span>О нас</span>
-            </nav>
 
             <!-- Заголовок страницы -->
             <section class="hero-section">
@@ -125,7 +120,7 @@
         <!-- Подвал сайта -->
         <footer class="section">
             <p>&copy; 2023 Традиционный бал РТУ МИРЭА. Все права защищены.</p>
-            <p>Телефон: +7 (495) 456-79-99</p>
+            <p>Телефон: +7 (123) 456-78-99</p>
         </footer>
     </div>
 
@@ -143,7 +138,7 @@
             
             <label for="phone">Телефон</label> 
             <input id="phone" name="phone" type="tel" inputmode="tel" autocomplete="tel" 
-                aria-describedby="phoneHelp" placeholder="88005553535" 
+                aria-describedby="phoneHelp" placeholder="8XXXXXXXXXX" 
                 required pattern="^\8\d{3}\d{3}\d{2}\d{2}$"> 
             <small id="phoneHelp">Формат: 89123456789</small>
             
