--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Главная - Традиционный бал РТУ МИРЭА</title>
     <meta name="description" content="Краткое описание главной страницы вашего сайта">
     <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico?v=2" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <script src="main.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Georgia&display=swap" rel="stylesheet">
