--- a/src/about.html
+++ b/src/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>О нас - Традиционный бал РТУ МИРЭА</title>
     <meta name="description" content="Узнайте больше о традиционном бале РТУ МИРЭА, нашей истории и команде">
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/icon1.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Reset-минимум */
