--- a/src/contacts.html
+++ b/src/contacts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакты - Традиционный бал РТУ МИРЭА</title>
     <meta name="description" content="Свяжитесь с нами для участия в традиционном бале РТУ МИРЭА">
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/icon1.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <style>
         * { box-sizing: border-box; }
